--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,10 +1,14 @@
 audit_header: false
 title: '-- CLIENT BRAND --'
-description: 'If you are looking to buy or sell a home, get all the information and the latest updates, tips, and tricks from -- CLIENT BRAND -- - your professional -- MARKET -- Real Estate Agents.'
+description: >-
+  If you are looking to buy or sell a home, get all the information and the
+  latest updates, tips, and tricks from -- CLIENT BRAND -- - your professional
+  -- MARKET -- Real Estate Agents.
 show_custom_links: true
 custom_links:
   - title: About
-    url: 'https://www.guardianmortgageonline.com/loan-officers/dallas-home-loan-officer-wade-betz/'
+    url: >-
+      https://www.guardianmortgageonline.com/loan-officers/dallas-home-loan-officer-wade-betz/
   - title: Mortgage Mapp
     url: 'http://gmc29.mortgagemapp.com/'
   - title: Agent Training
@@ -26,11 +30,11 @@ client:
 
     <br>Wade has a message for Guardian’s customers. There’s more to a mortgage
     than the close. Wade, like his Guardian counterparts, understands that a job
-    well done is a job that lasts the duration of the home loan. Counsel, support
-    and personal service are paramount to becoming a trusted mortgage advisor for
-    Guardian’s clients.
+    well done is a job that lasts the duration of the home loan. Counsel,
+    support and personal service are paramount to becoming a trusted mortgage
+    advisor for Guardian’s clients.
   market:
-  brand: The Betz Team
+  brand: 'The Betz Team | NMLS # 280613'
   brokerage: 'Guardian Mortgage,<br>a Division of Sunflower Bank, N.A.'
   address: '5910 North Central Expressway <br> Ste 725, Dallas, TX 75206'
   phone: 214-361-5626
@@ -41,7 +45,8 @@ client:
   url: 'http://TheBetzTeam.com'
 CTAs:
   first_CTA_text: Apply Online
-  first_CTA_URL: 'https://apply.guardianmortgageonline.com/signup?referrerId=TheBetzTeam@gmc-inc.com'
+  first_CTA_URL: >-
+    https://apply.guardianmortgageonline.com/signup?referrerId=TheBetzTeam@gmc-inc.com
   second_CTA_text: Request a Consultation
   second_CTA_URL: 'https://calendly.com/thebetzteam'
   VR_form: 'http://oi.vresp.com?fid=41c99825aa'
@@ -68,8 +73,9 @@ welcome_box:
     Our mission at -- CLIENT BRAND -- is to be your best resource for financial
     advice. Whether you are a buyer, seller, or investor, our team of
     professionals can answer any questions you might have about the lending
-    process. Subscribe to this blog to get the latest news on loans for purchase,
-    refinance, construction or cashout of residential and commercial property.
+    process. Subscribe to this blog to get the latest news on loans for
+    purchase, refinance, construction or cashout of residential and commercial
+    property.
 socials:
   review_sm_icons: false
   facebook_url: 'https://www.facebook.com/TheBetzTeam'
@@ -82,15 +88,26 @@ socials:
   zillow_url:
   trulia_url:
   yelp_url: 'http://www.yelp.com/biz/the-betz-team-guardian-mortgage-company-plano'
-  podcast_url: 'https://itunes.apple.com/us/podcast/winning-wade-guardian-mortgage/id1178107062?mt=2'
+  podcast_url: >-
+    https://itunes.apple.com/us/podcast/winning-wade-guardian-mortgage/id1178107062?mt=2
 podcast:
   title: The Betz Team Mortgae Podcast
   categories:
     - Education
   image: /img/podcast.jpg
-  subtitle: 'A podcast for home buyers curious about the lending process. Learn Tips, tricks and more educational material from The Betz Team'
-  description: 'Get all the information and and the latest updates, tips, and tricks of Personal Finance and Mortgages from The Betz Team'
-  keywords: 'Real Estate for sale, Real Estate agents, top real estate agents, local real estate agents, find a real estate agent, houses for sale in -- MARKET --, home selling tips, home for sale, home buying, home buying process, property finder, property search, property, real estate market, estate agent, realestate, real estate listings, buying a house, homes for sale, mls, home buyer'
+  subtitle: >-
+    A podcast for home buyers curious about the lending process. Learn Tips,
+    tricks and more educational material from The Betz Team
+  description: >-
+    Get all the information and and the latest updates, tips, and tricks of
+    Personal Finance and Mortgages from The Betz Team
+  keywords: >-
+    Real Estate for sale, Real Estate agents, top real estate agents, local real
+    estate agents, find a real estate agent, houses for sale in -- MARKET --,
+    home selling tips, home for sale, home buying, home buying process, property
+    finder, property search, property, real estate market, estate agent,
+    realestate, real estate listings, buying a house, homes for sale, mls, home
+    buyer
   author: '-- CLIENT NAME --'
 images:
   client_headshot_path: /img/headshot.jpg
