Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -70,7 +70,7 @@ socials:
   linkedin_url: https://www.linkedin.com/in/deuce-kirk-11518790
   gplus_url: https://plus.google.com/b/116636813422366707587
   youtube_url: https://www.youtube.com/channel/UC_lY2HuXi5lk98AwOF3W89g
-  twitter_url: https://twitter.com/deucekirk
+  twitter_url: https://twitter.com/deucekirkteam
   instagram_url:
   pinterest_url:
   zillow_url:
