--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,14 +1,24 @@
 audit_header: false
 title: '-- CLIENT BRAND --'
-description: 'If you are looking to buy or sell a home, get all the information and the latest updates, tips, and tricks from -- CLIENT BRAND -- - your professional -- MARKET -- Real Estate Agents.'
+description: >-
+  If you are looking to buy or sell a home, get all the information and the
+  latest updates, tips, and tricks from -- CLIENT BRAND -- - your professional
+  -- MARKET -- Real Estate Agents.
 show_custom_links: false
 custom_links:
   - title:
     url:
 client:
-  name: Jay Robbins | Partner, Broker
-  license_number: Mindy Robbins | Partner, Broker Associate
-  about_markdown: 'Robbins Real Estate Group is a boutique firm focused on home sales in Dallas, Park Cities, Richardson, and the North Dallas suburbs. The company is proudly owned and operated by the husband and wife team of Jay Robbins and Mindy Robbins. If you are looking for a real estate broker in Dallas, Park Cities, Richardson, or the North Dallas suburbs, call the company that will exceed your expectations. Call Mindy and Jay Robbins with Robbins Real Estate Group.'
+  name: 'Jay Robbins | Partner, Broker'
+  license_number:
+  about_markdown: >-
+    Robbins Real Estate Group is a boutique firm focused on home sales in
+    Dallas, Park Cities, Richardson, and the North Dallas suburbs. The company
+    is proudly owned and operated by the husband and wife team of Jay Robbins
+    and Mindy Robbins. If you are looking for a real estate broker in Dallas,
+    Park Cities, Richardson, or the North Dallas suburbs, call the company that
+    will exceed your expectations. Call Mindy and Jay Robbins with Robbins Real
+    Estate Group.
   market: Dallas-Fort Worth Texas Real Estate
   brand: Robbins Real Estate
   brokerage:
@@ -24,7 +34,8 @@ CTAs:
   first_CTA_text: Home Valuation
   first_CTA_URL: 'https://www.teamrobbins.com/sell/'
   second_CTA_text: Home Search
-  second_CTA_URL: 'https://www.teamrobbins.com/results-gallery/?sort=importdate&status=A&custom=41826&area=2935,2922&hood=93950,5382593,594913,96694&city=6261&minprice=250000&proptype=SF,C,VT&photo=1'
+  second_CTA_URL: >-
+    https://www.teamrobbins.com/results-gallery/?sort=importdate&status=A&custom=41826&area=2935,2922&hood=93950,5382593,594913,96694&city=6261&minprice=250000&proptype=SF,C,VT&photo=1
   VR_form:
 sidebar_CTA:
   - CTA_image_path: /img/cta-images/005.jpg
@@ -46,8 +57,8 @@ lender:
 welcome_box:
   welcome_headline: Join Our -- MARKET -- VIP List
   welcome_text_markdown: >
-    Our mission at -- CLIENT BRAND -- is to be your best resource for real estate
-    advice. Whether you are a buyer, seller, or investor, our team of
+    Our mission at -- CLIENT BRAND -- is to be your best resource for real
+    estate advice. Whether you are a buyer, seller, or investor, our team of
     professionals can answer any questions you might have about real estate.
     Subscribe to this blog to get the latest news on local market trends and
     receive expert tips for buying or selling a home.
@@ -55,8 +66,8 @@ socials:
   review_sm_icons: false
   facebook_url: 'http://facebook.com/RobbinsRealEstateGroup'
   linkedin_url: 'https://www.linkedin.com/in/mindyrobbins'
-  gplus_url: 'https://plus.google.com/+RobbinsRealEstateDallas'
-  youtube_url: 'https://www.youtube.com/user/RobbinsRealEstateGrp'
+  gplus_url: 'https://plus.google.com/b/109159594379699204474/109159594379699204474'
+  youtube_url: 'https://www.youtube.com/channel/UCw0GFrZCAD2k8yQ7uIPYnnQ'
   twitter_url: 'http://twitter.com/TeamRobbins'
   instagram_url:
   pinterest_url:
@@ -69,9 +80,20 @@ podcast:
   categories:
     - Education
   image: /img/podcast.jpg
-  subtitle: 'Learn all the tips, tricks and more for buyers and sellers in the -- MARKET -- Area Real Estate Market'
-  description: 'If you are looking to buy or sell a home, get all the information and the latest updates, tips, and tricks from -- CLIENT BRAND -- - your professional -- MARKET -- Real Estate Agents.'
-  keywords: 'Real Estate for sale, Real Estate agents, top real estate agents, local real estate agents, find a real estate agent, houses for sale in -- MARKET --, home selling tips, home for sale, home buying, home buying process, property finder, property search, property, real estate market, estate agent, realestate, real estate listings, buying a house, homes for sale, mls, home buyer'
+  subtitle: >-
+    Learn all the tips, tricks and more for buyers and sellers in the -- MARKET
+    -- Area Real Estate Market
+  description: >-
+    If you are looking to buy or sell a home, get all the information and the
+    latest updates, tips, and tricks from -- CLIENT BRAND -- - your professional
+    -- MARKET -- Real Estate Agents.
+  keywords: >-
+    Real Estate for sale, Real Estate agents, top real estate agents, local real
+    estate agents, find a real estate agent, houses for sale in -- MARKET --,
+    home selling tips, home for sale, home buying, home buying process, property
+    finder, property search, property, real estate market, estate agent,
+    realestate, real estate listings, buying a house, homes for sale, mls, home
+    buyer
   author: '-- CLIENT NAME --'
 images:
   client_headshot_path: /img/headshot.jpg
