old posts from blogger added

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -24,7 +24,7 @@ client:
 
 CTAs:
   first_CTA_text: Home Valuation
-  first_CTA_URL: /homevalue/
+  first_CTA_URL: http://www.youreastbayhousevalue.com/
   second_CTA_text: Home Search
   second_CTA_URL: http://www.searchsanramonvalleyhomes.com/
   VR_form: http://oi.vresp.com?fid=7c4789e0b7
@@ -34,7 +34,7 @@ sidebar_CTA:
     CTA_title: "What’s Your -- MARKET -- Home Worth?"
     CTA_text: "Are you thinking of selling your home or interested in learning about home prices in your neighborhood? We can help you."
     CTA_link_text: "Free -- MARKET -- Home Value Report"
-    CTA_url: /homevalue/
+    CTA_url: http://www.youreastbayhousevalue.com/
 
 second_sidebar_CTA:
   - CTA_image_path2: /img/cta-images/005.jpg
@@ -68,7 +68,7 @@ socials:
   review_sm_icons: false
   facebook_url: https://www.facebook.com/TheScottFullerTeam
   linkedin_url: https://www.linkedin.com/pub/scott-r-fuller/7/41/854
-  gplus_url:
+  gplus_url: https://plus.google.com/u/0/+ScottFullerteam
   youtube_url: https://www.youtube.com/user/TheFullerGroupRE
   twitter_url:
   instagram_url:
