Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -69,7 +69,7 @@ socials:
   facebook_url: https://www.facebook.com/Abel-Tejeda-American-Mortgage-Group-993302390783767
   linkedin_url: https://www.linkedin.com/in/abel-tejeda-8aaba16
   gplus_url: https://plus.google.com/109416905498767543671/about
-  youtube_url:
+  youtube_url: https://www.youtube.com/channel/UCTYKaTvO3ETTcSZWhQLieLg
   twitter_url:
   instagram_url:
   pinterest_url:
