--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -58,11 +58,7 @@ lender:
 welcome_box:
   welcome_headline: Join Our -- MARKET -- VIP List
   welcome_text_markdown: >
-    Our mission at -- CLIENT BRAND -- is to be your best resource for real estate
-    advice. Whether you are a buyer, seller, or investor, our team of
-    professionals can answer any questions you might have about real estate.
-    Subscribe to this blog to get the latest news on local market trends and
-    receive expert tips for buying or selling a home.
+    Our mission at -- CLIENT BRAND -- is to be your best resource for financial advice. Whether you are a buyer, seller, or investor, our team of professionals can answer any questions you might have about the lending process. Subscribe to this blog to get the latest news on loans for purchase, refinance, construction or cashout of residential and commercial property.
 
 socials:
   review_sm_icons: false
