--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -24,7 +24,7 @@ client:
 
 CTAs:
   first_CTA_text: Home Valuation
-  first_CTA_URL: http://www.greaterdchousevalues.com/
+  first_CTA_URL: http://greaterdchousevalues.com/
   second_CTA_text: Home Search
   second_CTA_URL: https://www.c21nm.com/agents/jody.donaldson/?section=search
   VR_form: http://oi.vresp.com?fid=345c91d05f
@@ -34,7 +34,7 @@ sidebar_CTA:
     CTA_title: "What’s Your -- MARKET -- Home Worth?"
     CTA_text: "Are you thinking of selling your home or interested in learning about home prices in your neighborhood? We can help you."
     CTA_link_text: "Free -- MARKET -- Home Value Report"
-    CTA_url: http://www.greaterdchousevalues.com/
+    CTA_url: http://greaterdchousevalues.com/
 
 second_sidebar_CTA:
   - CTA_image_path2: /img/cta-images/005.jpg
