Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -15,7 +15,7 @@ custom_links:
     url: /health-care
 client:
   clients:
-    - name: Dianna LoDolceh
+    - name: Dianna LoDolce
       title: Sr. Vice President/ General Manager
       specialty: BioPharma
       client_headshot_path: /img/headshot1.jpg
