Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -79,7 +79,7 @@ socials:
   podcast_url:
 
 podcast:
-  title:
+  title: Northeren Virginia Real Estate Podcast with Jody Donaldson
   categories: Education
   image: /img/podcast.jpg
   subtitle: 'Learn all the tips, tricks and more for buyers and sellers in the -- MARKET -- Area Real Estate Market'
