--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -68,7 +68,7 @@ socials:
   review_sm_icons: false
   facebook_url: http://facebook.com/thedonaldsonteam
   linkedin_url: http://linkedin.com/in/jodyddonaldson
-  gplus_url: https://plus.google.com/+Thedonaldsonteam
+  gplus_url: https://plus.google.com/b/115973343859057782159
   youtube_url: http://www.youtube.com/donaldsonteam
   twitter_url: http://twitter.com/donaldsonteam
   instagram_url:
