Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -69,7 +69,7 @@ socials:
   facebook_url: http://facebook.com/thedonaldsonteam
   linkedin_url: http://linkedin.com/in/jodyddonaldson
   gplus_url: https://plus.google.com/b/115973343859057782159
-  youtube_url: http://www.youtube.com/donaldsonteam
+  youtube_url: https://www.youtube.com/channel/UCvEpJF04Qn_1jtIFQJ7YFMg
   twitter_url: http://twitter.com/donaldsonteam
   instagram_url:
   pinterest_url:
