--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -67,15 +67,15 @@ socials:
   zillow_url:
   trulia_url:
   yelp_url:
-  podcast_url: https://itunes.apple.com/us/podcast/orange-county-real-estate-podcast-valerie-van-zilver/id1254489145?mt=2
+  podcast_url:
 
 podcast:
   title: The Retirement Bullseye Podcast With Mario Giganti
   categories: Education
   image: http://i.imgur.com/YVy7X4T.jpg
-  subtitle: 'Learn all the tips, tricks and more to better prepare yourself for the future.'
-  description: 'Our mission at -- CLIENT BRAND -- is to be your best resource for financial advice. Our team of professionals can answer any questions you might have about finance. Subscribe to this podcast to get the latest news on finance and receive tips for preparing yourself for your financial future.'
-  keywords: 'finance, financial planning, retirement, retirement planning, 401K'
+  subtitle: 'Learn all the tips, tricks and more for buyers and sellers in the -- MARKET -- Area Real Estate Market'
+  description: 'Our mission at -- CLIENT BRAND -- is to be your best resource for financial advice. Our team of professionals can answer any questions you might have about finance. Subscribe to this blog to get the latest news on finance and receive expert tips for preparing yourself for your financial future.'
+  keywords: 'Real Estate for sale, Real Estate agents, top real estate agents, local real estate agents, find a real estate agent, houses for sale in -- MARKET --, home selling tips, home for sale, home buying, home buying process, property finder, property search, property, real estate market, estate agent, realestate, real estate listings, buying a house, homes for sale, mls, home buyer'
   author: '-- CLIENT NAME --'
 
 images:
