--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -25,10 +25,10 @@ client:
   url: http://www.ScottIrvin.com
 
 CTAs:
-  first_CTA_text: Home Valuation
-  first_CTA_URL: /homevalue/
-  second_CTA_text: Home Search
-  second_CTA_URL: /homesearch/
+  first_CTA_text: Request a Free Strategy Session
+  first_CTA_URL: http://scottparealestate.com/contact
+  second_CTA_text: 
+  second_CTA_URL: 
   VR_form: http://oi.vresp.com?fid=b659b90932
 
 sidebar_CTA:
