--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,6 +1,9 @@
 audit_header: false
 title: 'Hooke, Hooke & Eckman Realtors, LLC'
-description: 'Improve your real estate career by getting all the information and the latest updates, tips, and tricks from -- CLIENT BRAND -- - your professional -- MARKET -- Real Estate Agents.'
+description: >-
+  Improve your real estate career by getting all the information and the latest
+  updates, tips, and tricks from -- CLIENT BRAND -- - your professional --
+  MARKET -- Real Estate Agents.
 show_custom_links: false
 custom_links:
   - title:
@@ -9,9 +12,21 @@ client:
   name: Andrew Kronenberg
   license_number:
   about_markdown: >-
-    Andrew was born and raised in Carlisle. The Kronenberg family has been in the area for four generations as small business owners and community leaders. Andrew says, “I have always felt a sense of accountability to my hometown and a need to contribute towards the responsible growth of our community. I take great pride in my profession for that reason.” A graduate of Carlisle High School, Andrew continued his education at Penn State University and earned a degree in Agribusiness Management and Economics.<br>
+    Andrew was born and raised in Carlisle. The Kronenberg family has been in
+    the area for four generations as small business owners and community
+    leaders. Andrew says, “I have always felt a sense of accountability to my
+    hometown and a need to contribute towards the responsible growth of our
+    community. I take great pride in my profession for that reason.” A graduate
+    of Carlisle High School, Andrew continued his education at Penn State
+    University and earned a degree in Agribusiness Management and Economics.<br>
 
-    <br>As a Carlisle, PA area Realtor, Andrew offers a wide spectrum of services, including residential real estate sales, new construction, commercial sales and leases, residential and commercial development, and has individual investment properties. He has extensive experience and knowledge in most facets of real estate. Andrew is proud of the relationships he has developed with his clients. He works hard to ensure the transaction provides as much investment growth as it does emotional satisfaction.
+    <br>As a Carlisle, PA area Realtor, Andrew offers a wide spectrum of
+    services, including residential real estate sales, new construction,
+    commercial sales and leases, residential and commercial development, and has
+    individual investment properties. He has extensive experience and knowledge
+    in most facets of real estate. Andrew is proud of the relationships he has
+    developed with his clients. He works hard to ensure the transaction provides
+    as much investment growth as it does emotional satisfaction.
   market: Pennsylvania
   brand: 'Hooke, Hooke & Eckman Realtors, LLC'
   brokerage:
@@ -24,35 +39,37 @@ client:
   url: 'http://andrew.hhande.com'
 CTAs:
   first_CTA_text: Home Valuation
-  first_CTA_URL: http://andrew.hhande.com/whats-my-home-worth.php
+  first_CTA_URL: 'http://andrew.hhande.com/whats-my-home-worth.php'
   second_CTA_text: Home Search
-  second_CTA_URL: http://andrew.hhande.com/idx/
+  second_CTA_URL: 'http://andrew.hhande.com/idx/'
   VR_form:
 sidebar_CTA:
   CTA_image_path: /img/cta-images/004.jpg
-  CTA_title: "What’s Your Home Worth?"
-  CTA_text: "Are you thinking of selling your home or interested in learning about home prices in your neighborhood? We can help you."
-  CTA_link_text: "Free Home Value Report"
-  CTA_url: http://andrew.hhande.com/whats-my-home-worth.php
+  CTA_title: What’s Your Home Worth?
+  CTA_text: >-
+    Are you thinking of selling your home or interested in learning about home
+    prices in your neighborhood? We can help you.
+  CTA_link_text: Free Home Value Report
+  CTA_url: 'http://andrew.hhande.com/whats-my-home-worth.php'
 sidebar_CTA2:
   CTA_image_path2: /img/cta-images/005.jpg
-  CTA_title2: "Looking for a Home?"
-  CTA_text2: "Search the entire MLS for your home."
-  CTA_link_text2: "Search the MLS"
-  CTA_url2: http://andrew.hhande.com/idx/
+  CTA_title2: Looking for a Home?
+  CTA_text2: Search the entire MLS for your home.
+  CTA_link_text2: Search the MLS
+  CTA_url2: 'http://andrew.hhande.com/idx/'
 welcome_box:
   welcome_headline: Join Our -- MARKET -- VIP List
   welcome_text_markdown: >
-    Our mission at Hooke, Hooke & Eckman Realtors, LLC is to be your best resource for real estate
-    education. Our team of professionals can answer any questions you might have
-    about real estate. Subscribe to this blog to get expert tips for building
-    your real estate career.
+    Our mission at Hooke, Hooke & Eckman Realtors, LLC is to be your best
+    resource for real estate education. Our team of professionals can answer any
+    questions you might have about real estate. Subscribe to this blog to get
+    expert tips for building your real estate career.
 socials:
   review_sm_icons: false
   facebook_url: 'https://www.facebook.com/AndrewKronenbergRealtor/'
   linkedin_url: 'https://www.linkedin.com/in/andrew-kronenberg-18152a15/'
   gplus_url:
-  youtube_url:
+  youtube_url: 'https://www.youtube.com/channel/UC9N1tquRfvl_O3hMB83o14Q/featured'
   twitter_url:
   instagram_url:
   pinterest_url:
@@ -64,15 +81,22 @@ podcast:
   title:
   categories:
   image:
-  subtitle: 'Learn all the tips, tricks and more for real estate professionals  in the -- MARKET -- Area'
-  description: 'Improve your real estate career by getting all the information and the latest updates, tips, and tricks from Hooke, Hooke & Eckman Realtors, LLC - your professional Real Estate Agents.'
-  keywords: 'Real Estate training, Real Estate agents, top real estate agents, local real estate agents, find a real estate agent, -- MARKET --, estate agent, realestate'
+  subtitle: >-
+    Learn all the tips, tricks and more for real estate professionals  in the --
+    MARKET -- Area
+  description: >-
+    Improve your real estate career by getting all the information and the
+    latest updates, tips, and tricks from Hooke, Hooke & Eckman Realtors, LLC -
+    your professional Real Estate Agents.
+  keywords: >-
+    Real Estate training, Real Estate agents, top real estate agents, local real
+    estate agents, find a real estate agent, -- MARKET --, estate agent,
+    realestate
   author: Andrew Kronenberg
 images:
   client_headshot_path: /img/headshot.jpg
   hero_logo_path: /img/logo.png
   logo_width_number: 80
-#   hero_text: 'Real Estate Video Blog'
   hero_background_hex: '#262624'
   hero_image_path: /img/background.jpg
 site_colors:
