Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -73,7 +73,7 @@ socials:
   twitter_url:
   instagram_url:
   pinterest_url:
-  zillow_url:
+  zillow_url: 'https://www.zillow.com/profile/AndrewKronenberg/'
   trulia_url:
   yelp_url:
   podcast_url:
