Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -69,14 +69,14 @@ welcome_box:
 socials:
   review_sm_icons: false
   facebook_url: https://www.facebook.com/JeremyQ.SKRealty/
-  linkedin_url:
+  linkedin_url: https://www.linkedin.com/in/jeremyqualley/
   gplus_url:
   youtube_url:
-  twitter_url:
+  twitter_url: https://twitter.com/JeremyQualley
   instagram_url:
   pinterest_url:
-  zillow_url:
-  trulia_url:
+  zillow_url: https://www.zillow.com/profile/Jeremy.Qualley
+  trulia_url: https://www.trulia.com/profile/jeremy-qualley-agent-west-fargo-nd-zg8ry79s/overview
   yelp_url:
   podcast_url:
 
