Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -18,7 +18,9 @@ client:
     hometown and a need to contribute towards the responsible growth of our
     community. I take great pride in my profession for that reason.” A graduate
     of Carlisle High School, Andrew continued his education at Penn State
-    University and earned a degree in Agribusiness Management and Economics.<br>
+    University and earned a degree in Agribusiness Management and Economics.
+
+    <br>
 
     <br>As a Carlisle, PA area Realtor, Andrew offers a wide spectrum of
     services, including residential real estate sales, new construction,
@@ -28,7 +30,7 @@ client:
     developed with his clients. He works hard to ensure the transaction provides
     as much investment growth as it does emotional satisfaction.
   market: Pennsylvania
-  brand: 'Hooke, Hooke & Eckman Realtors, LLC'
+  brand: 'Hooke, Hooke & Eckman <br> Realtors, LLC'
   brokerage:
   address: '977 Walnut Bottom Road<br>Carlisle, PA 17015'
   phone: 717-249-1844
