Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -29,7 +29,7 @@ client:
     in most facets of real estate. Andrew is proud of the relationships he has
     developed with his clients. He works hard to ensure the transaction provides
     as much investment growth as it does emotional satisfaction.
-  market: Pennsylvania
+  market: Central Pennsylvania
   brand: 'Hooke, Hooke & Eckman<br>Realtors, LLC'
   brokerage:
   address: '977 Walnut Bottom Road<br>Carlisle, PA 17015'
@@ -37,7 +37,7 @@ client:
   phone_type: office
   phone2: 717-609-8265
   phone2_type: direct
-  email: andrew@thinkhhe.com
+  email: AndrewK@HHandE.com
   url: 'http://andrew.hhande.com'
 CTAs:
   first_CTA_text: Home Valuation
