Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,9 +1,9 @@
 audit_header: false
 title: 'Hooke, Hooke & Eckman Realtors, LLC'
 description: >-
-  Improve your real estate career by getting all the information and the latest
-  updates, tips, and tricks from -- CLIENT BRAND -- - your professional --
-  MARKET -- Real Estate Agents.
+  If you are looking to buy or sell a home, get all the information and the
+  latest updates, tips, and tricks from -- CLIENT BRAND -- - your professional
+  -- MARKET -- Real Estate Agents.
 show_custom_links: false
 custom_links:
   - title:
