Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -61,11 +61,12 @@ sidebar_CTA2:
   CTA_url2: 'http://andrew.hhande.com/idx/'
 welcome_box:
   welcome_headline: Join Our -- MARKET -- VIP List
-  welcome_text_markdown: >
-    Our mission at Hooke, Hooke & Eckman Realtors, LLC is to be your best
-    resource for real estate education. Our team of professionals can answer any
-    questions you might have about real estate. Subscribe to this blog to get
-    expert tips for building your real estate career.
+  welcome_text_markdown: >-
+    Our mission at – CLIENT BRAND – is to be your best resource for real estate
+    advice. Whether you are a buyer, seller, or investor, our team of
+    professionals can answer any questions you might have about real estate.
+    Subscribe to this blog to get the latest news on local market trends and
+    receive expert tips for buying or selling a home.
 socials:
   review_sm_icons: false
   facebook_url: 'https://www.facebook.com/AndrewKronenbergRealtor/'
