Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -21,7 +21,7 @@ client:
   phone_type:
   phone2:
   phone2_type:
-  email: Scott@ScottIrvin.com
+  email: Careers@scottirvin.com
   url: http://www.ScottIrvin.com
 
 CTAs:
