Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -10,7 +10,7 @@ client:
   name: Shane & Clint Neal
   license_number: 609739 | 608871
   about_markdown: |
-    Neal & Neal Team is comprised of a team of local real estate professionals committed to selling some of the most desired homes in San Antonio. Selling these "right addresses" is the mission of Neal & Neal Team. Let us know what you're looking for. Please reach out to us with any questions you may have about investing in real estate.
+    Clint & Shane Neal, owners of the Neal & Neal Team at Keller Williams Realty, have been growing a rental portfolio, building houses, and flipping properties since 2014. Focusing on the investment side of real estate has allowed them to spin off and create another company, Neal Bros, LLC. Building this brand and company is of utmost importance to bridge the gap between agents and investment opportunities in real estate. They are out-of-the-box thinkers when it comes to creating a win-win situation for all parties involved. If you have a property that needs a lot of work or is in a distressed situation, they would love to earn your business.
   market: San Antonio
   brand: Neal Bros, LLC
   brokerage:
