description, keywords, title, changing anywhere that was branded for careers

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,9 +1,6 @@
 audit_header: false
-title: 'Hooke, Hooke & Eckman Realtors, LLC'
-description: >-
-  If you are looking to buy or sell a home, get all the information and the
-  latest updates, tips, and tricks from -- CLIENT BRAND -- - your professional
-  -- MARKET -- Real Estate Agents.
+title: 'Central Pennsylvania Real Estate Video Blog with Andrew Kronenberg'
+description: 'Central Pennsylvania real estate agent, Andrew Kronenberg, has the best resources for all things real estate. Whether you are buying, selling, or investing in real estate, Andrew Kronenberg is here to guide you through the process. If you are looking to buy or sell a home, you can get all the information and the latest updates, tips, and tricks from -- CLIENT BRAND --, your professional -- MARKET -- Real Estate Agents.'
 show_custom_links: false
 custom_links:
   - title:
@@ -85,16 +82,12 @@ podcast:
   categories:
   image:
   subtitle: >-
-    Learn all the tips, tricks and more for real estate professionals  in the --
+    Learn all the tips, tricks and more for buyers and sellers in the --
     MARKET -- Area
   description: >-
-    Improve your real estate career by getting all the information and the
-    latest updates, tips, and tricks from Hooke, Hooke & Eckman Realtors, LLC -
-    your professional Real Estate Agents.
+    'Central Pennsylvania real estate agent, Andrew Kronenberg, has the best resources for all things real estate. Whether you are buying, selling, or investing in real estate, Andrew Kronenberg is here to guide you through the process. If you are looking to buy or sell a home, you can get all the information and the latest updates, tips, and tricks from Hooke, Hooke & Eckman Realtors, LLC, your professional Central Pennsylvania Real Estate Agents.'
   keywords: >-
-    Real Estate training, Real Estate agents, top real estate agents, local real
-    estate agents, find a real estate agent, -- MARKET --, estate agent,
-    realestate
+    Central Pennsylvania Real Estate agents, top real estate agents, Central Pennsylvania homes for sale, Andrew Kronenberg, Hooke Hooke and Eckman Realtors LLC, Central Pennsylvania Real Estate Tips
   author: Andrew Kronenberg
 images:
   client_headshot_path: /img/headshot.jpg
