--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -23,7 +23,7 @@ client:
   email_type: Email
   email2: Shane@nealteam.com
   email2_type: Email
-  url: http://nealbrosinvestmentgroup.com
+  url: http://www.nealbrosinvestmentgroup.com
 CTAs:
   first_CTA_text: Reach Out To Us
   first_CTA_URL: /contact-us
