Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -19,9 +19,9 @@ client:
   phone_type:
   phone2:
   phone2_type:
-  email: Clint@nealteam.com
+  email: clint@nealteam.com
   email_type: Email
-  email2: Shane@nealteam.com
+  email2: shane@nealteam.com
   email2_type: Email
   url: http://www.nealbrosinvestmentgroup.com
 CTAs:
