--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -70,7 +70,7 @@ socials:
   review_sm_icons: false
   facebook_url: https://www.facebook.com/JeremyQ.SKRealty/
   linkedin_url: https://www.linkedin.com/in/jeremyqualley/
-  gplus_url:
+  gplus_url: https://plus.google.com/u/0/b/109815595532751966109
   youtube_url:
   twitter_url: https://twitter.com/JeremyQualley
   instagram_url:
