Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -76,7 +76,7 @@ socials:
   zillow_url: https://www.zillow.com/profile/JoeRichardson/
   trulia_url: https://www.trulia.com/profile/joe-richardson-agent-milwaukee-wi-zgg9dk15/overview/
   yelp_url: https://www.yelp.com/biz/joe-richardson-re-max-realty-100-milwaukee
-  podcast_url:
+  podcast_url: https://itunes.apple.com/us/podcast/milwaukee-real-estate-podcast-with-joe-richardson/id1266049357?mt=2
 
 podcast:
   title: Milwaukee Real Estate Podcast With Joe Richardson
