--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -77,7 +77,7 @@ socials:
   zillow_url:
   trulia_url:
   yelp_url:
-  podcast_url:
+  podcast_url: https://itunes.apple.com/us/podcast/alex-lam-royal-pacific-realty-podcast/id1266041450?mt=2
 
 podcast:
   title: Alex Lam Royal Pacific Realty Podcast
