--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -91,7 +91,7 @@ images:
   client_headshot_path: /img/headshot.jpg
   hero_logo_path: /img/logo.png
   logo_width_number: 40
-  hero_text: Shawna's Home Team Real Estate Video Blog
+  hero_text: Real Estate Video Blog
   hero_background_hex: '#b40101'
   hero_image_path: /img/background.jpg
   post_cover: /img/cover.jpg
